--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Gradiator",
   "description": "Simple CSS gradients.",
-  "version": "2",
+  "version": "2.0.0",
   "offline_enabled": true,
   "app": {
     "launch": {
@@ -10,6 +10,6 @@
   },
   "permissions": [
     "unlimitedStorage"
-  ],
-  "manifest_version": 2
+  ]
+  // "manifest_version": 2
 }
